# mmm

./: .env.example  .gitignore  README.md  demo.webm  pyproject.toml  requirements.txt
src/meetingminutes/: crew.py  main.py  processing.py  state.py  transcription.py  ui.py  utils.py
src/meetingminutes/config/: agents.yaml  tasks.yaml
